maj : Delete question to ahmed

--- a/Projet/presentation.ipynb
+++ b/Projet/presentation.ipynb
@@ -1420,9 +1420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour la réduction de dimensionalité, nous utilisons la technique de l'ACP (Analyse en Composantes Principales). Cette technique permet de réduire le nombre de variables en utilisant les variables les plus corrélées entre elles. \n",
-    "\n",
-    "> *Demande ahmed si ACP si nos dimensions que nous ajoutons sont pertinantes?*"
+    "Pour la réduction de dimensionalité, nous utilisons la technique de l'ACP (Analyse en Composantes Principales). Cette technique permet de réduire le nombre de variables en utilisant les variables les plus corrélées entre elles. "
    ]
   },
   {
@@ -1478,9 +1476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans le cas de la standardisation, les valeurs aberrantes sont mises à l'échelle \n",
-    "\n",
-    "> *critère de z-score, algo isolation forest pour les valeurs aberrantes?*"
+    "Dans le cas de la standardisation, les valeurs aberrantes sont mises à l'échelle "
    ]
   }
  ],
