maj: Rename section and reorganization

--- a/Projet/presentation.ipynb
+++ b/Projet/presentation.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Attendu du livrable"
+    "## Attendu du livrable"
    ]
   },
   {
@@ -26,6 +26,14 @@
     "* La démarche mise en œuvre pour améliorer un modèle.\n",
     "* le choix du modèle retenu au final parmi les différents essais effectués en justifiant pas rapport au besoin de votre client et des métriques.\n",
     "* vos propositions finales justifiées"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Récapitulation de l'étude éthique"
    ]
   },
   {
@@ -69,6 +77,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
+    "# Définir les chemins des fichiers\n",
     "GENERAL_DATA_PATH = \"./data/general_data.csv\"\n",
     "EMPLOYEE_SURVEY_DATA_PATH = \"./data/employee_survey_data.csv\"\n",
     "MANAGER_SURVEY_DATA_PATH = \"./data/manager_survey_data.csv\"\n",
@@ -76,8 +85,43 @@
     "OUT_TIME_DATA_PATH = \"./data/in_out_time/out_time.csv\"\n",
     "\n",
     "def load_data(data_path):\n",
+    "    \"\"\"\n",
+    "    Function to load data from a csv file to a pandas dataframe.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data_path : str\n",
+    "        Path to the csv file.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pandas.DataFrame\n",
+    "        Dataframe containing the data from the csv file.\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> load_data(GENERAL_DATA_PATH)\n",
+    "    \"\"\"\n",
     "    csv_path = os.path.join(data_path)\n",
     "    return pd.read_csv(csv_path, sep=',')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il y a des données manquantes dans les colonnes **NumCompaniesWorked** et **TotalWorkingYears**.\n",
+    "\n",
+    "Certaines données ne sont pas des nombres mais des chaînes de caractères. Il faut donc les transformer en nombres."
    ]
   },
   {
@@ -124,8 +168,26 @@
     }
    ],
    "source": [
+    "# Load data from general_data.csv\n",
     "df_general = load_data(GENERAL_DATA_PATH)\n",
+    "# Visualize the information of the dataframe\n",
     "df_general.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Employee Survey Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il y a des données manquantes dans les colonnes **EnvironmentSatisfaction**, **JobSatisfaction** et **WorkLifeBalance**."
    ]
   },
   {
@@ -152,8 +214,18 @@
     }
    ],
    "source": [
+    "# Load data from employee_survey_data.csv\n",
     "df_employee_survey = load_data(EMPLOYEE_SURVEY_DATA_PATH)\n",
+    "# Visualize the information of the dataframe\n",
     "df_employee_survey.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manager Survey Data"
    ]
   },
   {
@@ -179,7 +251,9 @@
     }
    ],
    "source": [
+    "# Load data from manager_survey_data.csv\n",
     "df_manager_survey = load_data(MANAGER_SURVEY_DATA_PATH)\n",
+    "# Visualize the information of the dataframe\n",
     "df_manager_survey.info()"
    ]
   },
@@ -201,7 +275,9 @@
     }
    ],
    "source": [
+    "# Load data from in_time.csv\n",
     "df_in_time = load_data(IN_TIME_DATA_PATH)\n",
+    "# Visualize the information of the dataframe\n",
     "df_in_time.info()"
    ]
   },
@@ -223,7 +299,9 @@
     }
    ],
    "source": [
+    "# Load data from out_time.csv\n",
     "df_out_time = load_data(OUT_TIME_DATA_PATH)\n",
+    "# Visualize the information of the dataframe\n",
     "df_out_time.info()"
    ]
   },
@@ -939,7 +1017,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Préparation à la normalisation"
+    "## Préparation au traitement des données"
    ]
   },
   {
