Update Ethical data report

--- a/Projet/ethique_des_donnees.ipynb
+++ b/Projet/ethique_des_donnees.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les systèmes d'IA doivent être développés et utilisés pour le bien commun :"
+    "## Etude de cas"
    ]
   },
   {
@@ -55,7 +55,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'IA doit être utilisée pour créer une société juste et inclusive, en répondant aux défis sociétaux et environnementaux, et en améliorant la qualité de vie des personnes. L'IA doit être conçue pour résoudre des problèmes spécifiques, plutôt que d'être utilisée à des fins nuisibles ou malveillantes."
+    "1. **Respect de l'autonomie humaine :**\n",
+    "    - L'intelligence artificielle doit être utilisisée pour proposer des suggestions et des recommandations, mais ne doit pas être utilisée pour prendre des décisions.\n",
+    "2. **Robustesse technique et sécurité :**\n",
+    "    - Doit disposer de leviers de sécurité, de contrôle et de surveillance. Comme par exemple, la possibilité de désactiver l'IA en cas de problème.\n",
+    "3. **Confidentialité et gouvernance des données :**\n",
+    "    - Pas de collecte de données personnelles.\n",
+    "    - Localisation des serveurs.\n",
+    "    - Les responsables et les utilisateurs doivent être identifiables et responsables.\n",
+    "    - Contrôle des données par les utilisateurs.\n",
+    "4. **Transparence :**\n",
+    "    - Pas de partit-pris.\n",
+    "    - Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes.\n",
+    "5. **Diversité, non-discrimination et équité :**\n",
+    "    - Pas de biais ou de discrimination.\n",
+    "    - Respect de la diversité et de l'égalité de traitement.\n",
+    "    * *Pas de traitement sur : l'origine, l'éthnie, la nationalité, l'handicap, le sexe, la religion et le statut matriominial ou familial.*\n",
+    "6. **Bien-être environnemental et sociétal :**\n",
+    "    - Pas de risque de traçabilité pour les utilisateurs.\n",
+    "    - Pas de risque de sécurité pour les données.\n",
+    "7. **Responsabilité :**\n",
+    "    - Conformité aux normes en vigueur."
    ]
   },
   {
@@ -63,7 +83,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### L'IA doit être fiable et sûre :"
+    "### Autonomie humaine"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Robustesse technique et sécurité"
    ]
   },
   {
@@ -75,11 +111,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les systèmes d'IA doivent être transparents :"
+    "Les systèmes d'IA doivent être conçus pour renforcer la responsabilité et la sécurité, en minimisant les risques pour les utilisateurs et en facilitant la détection des erreurs ou des actes malveillants. Ils doivent être conformes aux normes de sécurité et de protection des données, et permettre la traçabilité et la responsabilité."
    ]
   },
   {
@@ -87,31 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Les utilisateurs doivent être informés de la façon dont les systèmes d'IA prennent des décisions et comment les données sont collectées et traitées."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Les systèmes d'IA doivent être soumis à une gouvernance appropriée :"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Les systèmes d'IA doivent être soumis à des normes et des réglementations appropriées pour garantir leur conformité avec les valeurs, les droits et les réglementations en vigueur. Les responsables de la mise en œuvre et de l'utilisation des systèmes d'IA doivent être identifiables et responsables."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Les systèmes d'IA doivent respecter la vie privée et les données personnelles :"
+    "### Confidentialité et gouvernance des données"
    ]
   },
   {
@@ -127,7 +138,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les systèmes d'IA doivent être conçus pour garantir l'équité :"
+    "Les systèmes d'IA doivent être soumis à des normes et des réglementations appropriées pour garantir leur conformité avec les valeurs, les droits et les réglementations en vigueur. Les responsables de la mise en œuvre et de l'utilisation des systèmes d'IA doivent être identifiables et responsables."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transparence"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Les utilisateurs doivent être informés de la façon dont les systèmes d'IA prennent des décisions et comment les données sont collectées et traitées."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diversité, non-discrimination et équité"
    ]
   },
   {
@@ -143,14 +178,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les systèmes d'IA doivent être utilisés pour renforcer la responsabilité et la sécurité :"
+    "### Bien-être environnemental et sociétal"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les systèmes d'IA doivent être conçus pour renforcer la responsabilité et la sécurité, en minimisant les risques pour les utilisateurs et en facilitant la détection des erreurs ou des actes malveillants. Ils doivent être conformes aux normes de sécurité et de protection des données, et permettre la traçabilité et la responsabilité."
+    "test"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Responsabilité"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test"
    ]
   },
   {
