maj: Format document

--- a/Projet/pipeline.ipynb
+++ b/Projet/pipeline.ipynb
@@ -6,21 +6,22 @@
    "metadata": {},
    "source": [
     "# Pré-traitement des données\n",
+    "\n",
     "Voici quelques étapes à suivre pour pré-traiter les données pour une utilisation avec K-means :\n",
     "\n",
     "1. Intégration des données : Intégrez les données des différentes sources en une seule source de données. Si vous travaillez avec des données provenant de plusieurs sources, vous devez les intégrer en une seule source de données. Cela vous permettra de traiter les données comme une seule entité et de les analyser plus facilement.\n",
     "\n",
     "1. Nettoyer les données : Assurez-vous que vos données sont propres et ne contiennent pas de valeurs manquantes, de doublons ou d'autres anomalies. Si nécessaire, supprimez ou remplacez les données manquantes.\n",
     "\n",
-    "2. Normaliser les données : Normalisez les données en les mettant à l'échelle de sorte que chaque variable ait une plage de valeurs comparable. La normalisation peut être effectuée en utilisant la méthode de la moyenne et de l'écart type, la méthode de la plage ou la méthode de la normalisation de l'amplitude.\n",
+    "1. Normaliser les données : Normalisez les données en les mettant à l'échelle de sorte que chaque variable ait une plage de valeurs comparable. La normalisation peut être effectuée en utilisant la méthode de la moyenne et de l'écart type, la méthode de la plage ou la méthode de la normalisation de l'amplitude.\n",
     "\n",
-    "3. Réduire la dimensionnalité : Si vous travaillez avec des données à haute dimensionnalité, utilisez des techniques de réduction de dimensionnalité telles que l'analyse en composantes principales (PCA) pour réduire la dimensionnalité de vos données et faciliter leur analyse.\n",
+    "1. Réduire la dimensionnalité : Si vous travaillez avec des données à haute dimensionnalité, utilisez des techniques de réduction de dimensionnalité telles que l'analyse en composantes principales (PCA) pour réduire la dimensionnalité de vos données et faciliter leur analyse.\n",
     "\n",
-    "4. Identifier les valeurs aberrantes : Les valeurs aberrantes peuvent fausser les résultats de K-means, il est donc important de les identifier et de les traiter correctement. Les valeurs aberrantes peuvent être supprimées ou remplacées par des valeurs plus appropriées.\n",
+    "1. Identifier les valeurs aberrantes : Les valeurs aberrantes peuvent fausser les résultats de K-means, il est donc important de les identifier et de les traiter correctement. Les valeurs aberrantes peuvent être supprimées ou remplacées par des valeurs plus appropriées.\n",
     "\n",
-    "5. Sélectionner les caractéristiques : Si vous travaillez avec des données qui contiennent de nombreuses caractéristiques, il peut être judicieux de sélectionner les caractéristiques les plus pertinentes pour votre analyse.\n",
+    "1. Sélectionner les caractéristiques : Si vous travaillez avec des données qui contiennent de nombreuses caractéristiques, il peut être judicieux de sélectionner les caractéristiques les plus pertinentes pour votre analyse.\n",
     "\n",
-    "En résumé, le pré-traitement des données pour K-means comprend le nettoyage des données, la normalisation des données, la réduction de la dimensionnalité, l'identification et le traitement des valeurs aberrantes et la sélection des caractéristiques. En effectuant ces étapes, vous pouvez améliorer la qualité de vos données et obtenir des résultats plus significatifs à l'aide de K-means."
+    "En résumé, le pré-traitement des données pour K-means comprend le nettoyage des données, la normalisation des données, la réduction de la dimensionnalité, l'identification et le traitement des valeurs aberrantes et la sélection des caractéristiques. En effectuant ces étapes, vous pouvez améliorer la qualité de vos données et obtenir des résultats plus significatifs à l'aide de K-means.\n"
    ]
   },
   {
@@ -29,7 +30,8 @@
    "metadata": {},
    "source": [
     "## Pipeline\n",
-    "La pipeline fait référence à un ensemble d'étapes ou de processus qui sont exécutés séquentiellement pour traiter les données d'entrée, extraire des caractéristiques, entraîner le modèle et prédire les résultats."
+    "\n",
+    "La pipeline fait référence à un ensemble d'étapes ou de processus qui sont exécutés séquentiellement pour traiter les données d'entrée, extraire des caractéristiques, entraîner le modèle et prédire les résultats.\n"
    ]
   },
   {
@@ -51,7 +53,7 @@
     "EMPLOYEE_SURVEY_DATA_PATH = \"./data/employee_survey_data.csv\"\n",
     "MANAGER_SURVEY_DATA_PATH = \"./data/manager_survey_data.csv\"\n",
     "IN_TIME_DATA_PATH = \"./data/in_out_time/in_time.csv\"\n",
-    "OUT_TIME_DATA_PATH = \"./data/in_out_time/out_time.csv\""
+    "OUT_TIME_DATA_PATH = \"./data/in_out_time/out_time.csv\"\n"
    ]
   },
   {
@@ -60,7 +62,8 @@
    "metadata": {},
    "source": [
     "## Acquisition des données\n",
-    "Collecter des données brutes à partir de diverses sources, telles que des capteurs, des fichiers, des bases de données, etc."
+    "\n",
+    "Collecter des données brutes à partir de diverses sources, telles que des capteurs, des fichiers, des bases de données, etc.\n"
    ]
   },
   {
@@ -81,7 +84,7 @@
     "        Column to merge on.\n",
     "    how : str\n",
     "        Type of merge.\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    df_master : pandas.DataFrame\n",
@@ -102,9 +105,10 @@
     "    df_master = list_df[0]\n",
     "    for df in list_df[1:]:\n",
     "        df_master = df_master.merge(df,\n",
-    "                       on = on_column, \n",
-    "                       how = how)\n",
+    "                                    on=on_column,\n",
+    "                                    how=how)\n",
     "    return df_master\n",
+    "\n",
     "\n",
     "def avg_time(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    '''\n",
@@ -114,7 +118,7 @@
     "    ----------\n",
     "    df : pandas.DataFrame\n",
     "        Dataframe with in_time or out_time.\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    df : pandas.DataFrame\n",
@@ -142,7 +146,7 @@
     "    # Add column EmployeeID\n",
     "    df = df.to_frame().reset_index()\n",
     "    df.columns = [\"EmployeeID\", \"AvgTime\"]\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -172,15 +176,17 @@
     "avg_out_time_per_employee = avg_time(df_out_time)\n",
     "# Merge in and out time\n",
     "avg_work_time_per_employee = avg_out_time_per_employee.copy()\n",
-    "avg_work_time_per_employee[\"AvgTime\"] = avg_out_time_per_employee[\"AvgTime\"] - avg_in_time_per_employee[\"AvgTime\"]\n",
-    "avg_work_time_per_employee[\"AvgTime\"] = avg_work_time_per_employee[\"AvgTime\"].apply(lambda x: x.total_seconds() / 3600)\n",
+    "avg_work_time_per_employee[\"AvgTime\"] = avg_out_time_per_employee[\"AvgTime\"] - \\\n",
+    "    avg_in_time_per_employee[\"AvgTime\"]\n",
+    "avg_work_time_per_employee[\"AvgTime\"] = avg_work_time_per_employee[\"AvgTime\"].apply(\n",
+    "    lambda x: x.total_seconds() / 3600)\n",
     "\n",
     "# Merge with total dataframe\n",
     "df_total = df_total.merge(\n",
     "    avg_work_time_per_employee,\n",
-    "    on = \"EmployeeID\",\n",
-    "    how = \"outer\"\n",
-    ")"
+    "    on=\"EmployeeID\",\n",
+    "    how=\"outer\"\n",
+    ")\n"
    ]
   },
   {
@@ -476,7 +482,7 @@
    ],
    "source": [
     "# Display a random sample of 5 rows\n",
-    "df_total.sample(5)"
+    "df_total.sample(5)\n"
    ]
   },
   {
@@ -484,14 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prétraitement des données"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nettoyer, normaliser et préparer les données pour l'analyse ultérieure."
+    "## Prétraitement des données\n"
    ]
   },
   {
@@ -499,14 +498,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nettoyage des données"
+    "Nettoyer, normaliser et préparer les données pour l'analyse ultérieure.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une étude préablable a permis de déterminer quels champs n'apportaient pas d'informations utiles à la prédiction. De même pour les champs non éthiques."
+    "### Nettoyage des données\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Une étude préablable a permis de déterminer quels champs n'apportaient pas d'informations utiles à la prédiction. De même pour les champs non éthiques.\n"
    ]
   },
   {
@@ -556,7 +564,7 @@
     "# Delete to free memory\n",
     "del df_total\n",
     "del fields_not_useful\n",
-    "del fields_not_ethical"
+    "del fields_not_ethical\n"
    ]
   },
   {
@@ -564,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalisation des données"
+    "### Normalisation des données\n"
    ]
   },
   {
@@ -583,7 +591,7 @@
     "    (\"YearsAtCompany\", \"TotalWorkingYears\"),\n",
     "    (\"YearsSinceLastPromotion\", \"TotalWorkingYears\"),\n",
     "    (\"YearsWithCurrManager\", \"TotalWorkingYears\"),\n",
-    "]"
+    "]\n"
    ]
   },
   {
@@ -596,15 +604,15 @@
     "\n",
     "# Split train and test sets\n",
     "X_useful_train_set, X_useful_test_set, y_useful_train_set, y_useful_test_set = train_test_split(\n",
-    "            df_useful, df_useful[\"Attrition\"], stratify=df_useful[\"Attrition\"], test_size=0.2, random_state=42)\n",
+    "    df_useful, df_useful[\"Attrition\"], stratify=df_useful[\"Attrition\"], test_size=0.2, random_state=42)\n",
     "X_ethical_train_set, X_ethical_test_set, y_ethical_train_set, y_ethical_test_set = train_test_split(\n",
-    "            df_ethical, df_ethical[\"Attrition\"], stratify=df_ethical[\"Attrition\"], test_size=0.2, random_state=42)\n",
+    "    df_ethical, df_ethical[\"Attrition\"], stratify=df_ethical[\"Attrition\"], test_size=0.2, random_state=42)\n",
     "\n",
     "# Remove Attrition and EmployeeID from train and test sets\n",
     "X_useful_train_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n",
     "X_useful_test_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n",
     "X_ethical_train_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n",
-    "X_ethical_test_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)"
+    "X_ethical_test_set.drop([\"Attrition\", \"EmployeeID\"], axis=1, inplace=True)\n"
    ]
   },
   {
@@ -651,7 +659,7 @@
     }
    ],
    "source": [
-    "X_useful_train_set.info()"
+    "X_useful_train_set.info()\n"
    ]
   },
   {
@@ -696,7 +704,7 @@
     }
    ],
    "source": [
-    "X_ethical_test_set.info()"
+    "X_ethical_test_set.info()\n"
    ]
   },
   {
@@ -743,7 +751,7 @@
     }
    ],
    "source": [
-    "X_useful_test_set.info()"
+    "X_useful_test_set.info()\n"
    ]
   },
   {
@@ -758,6 +766,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.pipeline import Pipeline\n",
+    "\n",
     "\n",
     "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
     "    \"\"\"\n",
@@ -777,10 +786,11 @@
     "    -------\n",
     "    fit(X, y=None)\n",
     "        Fit the model.\n",
-    "    \n",
+    "\n",
     "    transform(X, y=None)\n",
     "        Transform the model.\n",
     "    \"\"\"\n",
+    "\n",
     "    def __init__(self, attribs_name_to_merge=[]):\n",
     "        \"\"\"\n",
     "        Init the class.\n",
@@ -795,6 +805,7 @@
     "        None\n",
     "        \"\"\"\n",
     "        self.attribs_name_to_merge = attribs_name_to_merge\n",
+    "\n",
     "    def fit(self, X=None, y=None):\n",
     "        \"\"\"\n",
     "        Fit the model.\n",
@@ -803,7 +814,7 @@
     "        ----------\n",
     "        X : pandas.DataFrame\n",
     "            The data to fit the model.\n",
-    "        \n",
+    "\n",
     "        y : pandas.DataFrame\n",
     "            The target to fit the model.\n",
     "            default: None\n",
@@ -813,6 +824,7 @@
     "        self\n",
     "        \"\"\"\n",
     "        return self  # nothing else to do\n",
+    "\n",
     "    def transform(self, X, y=None):\n",
     "        \"\"\"\n",
     "        Transform the model.\n",
@@ -821,7 +833,7 @@
     "        ----------\n",
     "        X : pandas.DataFrame\n",
     "            The data to transform the model.\n",
-    "        \n",
+    "\n",
     "        y : pandas.DataFrame\n",
     "            The target to transform the model.\n",
     "            default: None\n",
@@ -837,6 +849,7 @@
     "            # index1 * index2\n",
     "            X[\"%sPer%s\" % (ctm[0], ctm[1])] = X[ctm[0]] * X[ctm[1]]\n",
     "        return X\n",
+    "\n",
     "    def set_output(self, transform):\n",
     "        \"\"\"\n",
     "        Set the output of the model. But here we don't need it because the output is the same as the input.\n",
@@ -850,7 +863,7 @@
     "        -------\n",
     "        None\n",
     "        \"\"\"\n",
-    "        pass"
+    "        pass\n"
    ]
   },
   {
@@ -878,13 +891,14 @@
    "outputs": [],
    "source": [
     "# List of categorical attributes\n",
-    "useful_cat_attribs = [\"BusinessTravel\", \"Department\", \"JobRole\", \"Gender\", \"MaritalStatus\"]\n",
+    "useful_cat_attribs = [\"BusinessTravel\", \"Department\",\n",
+    "                      \"JobRole\", \"Gender\", \"MaritalStatus\"]\n",
     "\n",
     "# Full pipeline\n",
     "useful_full_pipeline = ColumnTransformer(transformers=[\n",
     "    (\"num\", num_pipeline_useful, useful_train_set_num.keys()),\n",
     "    (\"cat\", OneHotEncoder(sparse_output=False), useful_cat_attribs),\n",
-    "], remainder='passthrough').set_output(transform=\"pandas\")"
+    "], remainder='passthrough').set_output(transform=\"pandas\")\n"
    ]
   },
   {
@@ -911,7 +925,7 @@
     "ethical_full_pipeline = ColumnTransformer([\n",
     "    (\"num\", num_pipeline_ethical, ethical_train_set_num.keys()),\n",
     "    (\"cat\", OneHotEncoder(sparse_output=False), ethical_cat_attribs),\n",
-    "]).set_output(transform=\"pandas\")"
+    "]).set_output(transform=\"pandas\")\n"
    ]
   },
   {
@@ -921,9 +935,11 @@
    "outputs": [],
    "source": [
     "# -- Useful --\n",
-    "useful_train_set_prepared = useful_full_pipeline.fit_transform(X_useful_train_set)\n",
+    "useful_train_set_prepared = useful_full_pipeline.fit_transform(\n",
+    "    X_useful_train_set)\n",
     "# -- Ethical --\n",
-    "ethical_train_set_prepared = ethical_full_pipeline.fit_transform(X_ethical_train_set)"
+    "ethical_train_set_prepared = ethical_full_pipeline.fit_transform(\n",
+    "    X_ethical_train_set)\n"
    ]
   },
   {
@@ -1853,7 +1869,7 @@
     }
    ],
    "source": [
-    "useful_train_set_prepared"
+    "useful_train_set_prepared\n"
    ]
   },
   {
@@ -2697,7 +2713,7 @@
     }
    ],
    "source": [
-    "ethical_train_set_prepared"
+    "ethical_train_set_prepared\n"
    ]
   },
   {
@@ -2719,7 +2735,7 @@
     "del useful_cat_attribs\n",
     "del ethical_cat_attribs\n",
     "del useful_full_pipeline\n",
-    "del ethical_full_pipeline"
+    "del ethical_full_pipeline\n"
    ]
   },
   {
@@ -2730,6 +2746,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
+    "\n",
     "\n",
     "def plot_pca(df):\n",
     "    # Instanciation de la classe PCA\n",
@@ -2746,7 +2763,7 @@
     "    plt.axvline(x=15, color='r', linestyle='--')\n",
     "    # Changer les borne de l'axe des x\n",
     "    plt.xlim(0, 30, 5)\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
@@ -2774,7 +2791,7 @@
     }
    ],
    "source": [
-    "plot_pca(ethical_train_set_prepared)"
+    "plot_pca(ethical_train_set_prepared)\n"
    ]
   },
   {
@@ -2802,14 +2819,7 @@
     }
    ],
    "source": [
-    "plot_pca(useful_train_set_prepared)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pour les 2 jeux de données, la réduction de la dimentionnalité semble adaptée. Pour cela, nous allons utiliser l'ACP. Grace au graphique ci-dessus, nous pouvons voir que les 2 jeux de données sont très proches. Nous allons donc utiliser le même nombre de composantes pour les 2 jeux de données : **15**."
+    "plot_pca(useful_train_set_prepared)\n"
    ]
   },
   {
@@ -2817,7 +2827,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sauvegarde du jeu de données"
+    "Pour les 2 jeux de données, la réduction de la dimentionnalité semble adaptée. Pour cela, nous allons utiliser l'ACP. Grace au graphique ci-dessus, nous pouvons voir que les 2 jeux de données sont très proches. Nous allons donc utiliser le même nombre de composantes pour les 2 jeux de données : **15**.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sauvegarde du jeu de données\n"
    ]
   },
   {
@@ -2841,7 +2859,7 @@
     "\n",
     "# -- Ethical --\n",
     "with open(path_data + \"ethical.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(ethical_train_set_prepared, f)"
+    "    pickle.dump(ethical_train_set_prepared, f)\n"
    ]
   },
   {
@@ -2850,7 +2868,8 @@
    "metadata": {},
    "source": [
     "## Extraction de caractéristiques\n",
-    "Extraire les caractéristiques pertinentes des données brutes pour les utiliser dans l'apprentissage automatique."
+    "\n",
+    "Extraire les caractéristiques pertinentes des données brutes pour les utiliser dans l'apprentissage automatique.\n"
    ]
   },
   {
@@ -2859,7 +2878,8 @@
    "metadata": {},
    "source": [
     "## Sélection des modèles\n",
-    "Sélectionner le modèle d'apprentissage automatique le plus approprié pour le problème spécifique que l'on cherche à résoudre."
+    "\n",
+    "Sélectionner le modèle d'apprentissage automatique le plus approprié pour le problème spécifique que l'on cherche à résoudre.\n"
    ]
   },
   {
@@ -2868,7 +2888,8 @@
    "metadata": {},
    "source": [
     "## Entraînement du modèle\n",
-    "Entraîner le modèle sélectionné sur les données d'entraînement en utilisant des algorithmes d'apprentissage automatique appropriés."
+    "\n",
+    "Entraîner le modèle sélectionné sur les données d'entraînement en utilisant des algorithmes d'apprentissage automatique appropriés.\n"
    ]
   },
   {
@@ -2877,7 +2898,8 @@
    "metadata": {},
    "source": [
     "## Évaluation du modèle\n",
-    "Evaluer les performances du modèle sur des données de test pour mesurer sa précision, sa fiabilité et sa robustesse."
+    "\n",
+    "Evaluer les performances du modèle sur des données de test pour mesurer sa précision, sa fiabilité et sa robustesse.\n"
    ]
   },
   {
@@ -2886,7 +2908,8 @@
    "metadata": {},
    "source": [
     "## Mise en production du modèle\n",
-    "Intégrer le modèle entraîné dans une application en temps réel pour effectuer des prédictions sur de nouvelles données."
+    "\n",
+    "Intégrer le modèle entraîné dans une application en temps réel pour effectuer des prédictions sur de nouvelles données.\n"
    ]
   }
  ],
