Update - Ethical data

--- a/Projet/ethique_des_donnees.ipynb
+++ b/Projet/ethique_des_donnees.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Etude de cas"
+    "## Étude de cas"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test"
+    "Nous avons pris en compte le respect de l'autonomie humaine en évitant que l'IA prenne des décisions à la place des humains. Il faut opter pour l'utilisation de l'IA pour proposer des suggestions et des recommandations aux utilisateurs. Nous avons ainsi assuré que les décisions finales restent entre les mains des humains."
    ]
   },
   {
@@ -107,14 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les systèmes d'IA doivent être conçus de manière à fonctionner de manière fiable et sûre, en minimisant les risques pour les utilisateurs et l'environnement. Ils doivent être capables de détecter et de résoudre les erreurs, de prévenir les failles de sécurité et de maintenir leur fonctionnement dans des conditions imprévues."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Les systèmes d'IA doivent être conçus pour renforcer la responsabilité et la sécurité, en minimisant les risques pour les utilisateurs et en facilitant la détection des erreurs ou des actes malveillants. Ils doivent être conformes aux normes de sécurité et de protection des données, et permettre la traçabilité et la responsabilité."
+    "La robustesse technique et la sécurité ont été des points clés dans notre projet. Il faut en priorité mettre en place des leviers de sécurité, de contrôle et de surveillance pour éviter tout problème potentiel. Par exemple, HumanForYou a prévu la possibilité de désactiver l'IA en cas de problème et a veillé à ce que l'IA soit développée selon les normes et standards de sécurité en vigueur, pour garantir un haut niveau de protection des données."
    ]
   },
   {
@@ -130,15 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les systèmes d'IA doivent être conçus de manière à garantir le respect de la vie privée et des données personnelles des utilisateurs. Les données doivent être collectées et traitées de manière responsable et transparente, et les utilisateurs doivent avoir un certain contrôle sur leurs données."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Les systèmes d'IA doivent être soumis à des normes et des réglementations appropriées pour garantir leur conformité avec les valeurs, les droits et les réglementations en vigueur. Les responsables de la mise en œuvre et de l'utilisation des systèmes d'IA doivent être identifiables et responsables."
+    "Nous avons pris en compte la confidentialité et la gouvernance des données tout au long du projet. Nous avons opté pour la non-collecte de données personnelles pour respecter la vie privée des utilisateurs et recommandons une localisation sécurisée des serveurs, et assurer que les responsables et les utilisateurs soient identifiables et responsables. Enfin, il faut mettre en place un contrôle des données par les utilisateurs pour leur permettre de gérer leurs informations de manière autonome."
    ]
   },
   {
@@ -154,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Les utilisateurs doivent être informés de la façon dont les systèmes d'IA prennent des décisions et comment les données sont collectées et traitées."
+    "Nous avons veillé à éviter tout parti pris dans notre projet. Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Nous avons ainsi assuré la transparence de notre projet en fournissant des explications claires sur les choix de recommandations proposées par l'IA."
    ]
   },
   {
@@ -170,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les systèmes d'IA doivent être conçus pour garantir l'équité et l'inclusion, en évitant les biais ou la discrimination. Ils doivent respecter la diversité et l'égalité de traitement, en particulier en ce qui concerne les groupes vulnérables ou discriminés."
+    "Dans notre projet, nous avons veillé à ne pas introduire de biais ou de discrimination, et à respecter la diversité et l'égalité de traitement. Nous avons évité tout traitement basé sur l'origine, l'éthnie, la nationalité, l'handicap, le sexe, la religion et le statut matrimonial ou familial."
    ]
   },
   {
@@ -186,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test"
+    "Nous avons pris en compte le bien-être environnemental et sociétal dans notre projet d'IA en évitant tout risque de traçabilité pour les utilisateurs et en garantissant la sécurité des données. Nous avons assuré que notre projet ne pose aucun risque pour l'environnement ou la société."
    ]
   },
   {
@@ -202,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test"
+    "Enfin, il faut assurer la conformité aux normes en vigueur pour garantir la responsabilité du projet. Nous avons ainsi veillé à respecter les lois et les réglementations en matière d'éthique de l'IA pour assurer la transparence et la responsabilité."
    ]
   },
   {
