--- a/Projet/ethique_des_donnees.ipynb
+++ b/Projet/ethique_des_donnees.ipynb
@@ -91,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous avons pris en compte le respect de l'autonomie humaine en évitant que l'IA prenne des décisions à la place des humains. Il faut opter pour l'utilisation de l'IA pour proposer des suggestions et des recommandations aux utilisateurs. Nous avons ainsi assuré que les décisions finales restent entre les mains des humains."
+    "Nous avons pris en compte le respect de l'autonomie humaine en évitant que l'IA prenne des décisions à la place des humains. Il faut opter pour l'utilisation de l'IA pour proposer des suggestions et des recommandations aux utilisateurs. Nous avons ainsi assuré que les décisions finales restent entre les mains des humains.\n",
+    "\n",
+    "Ressource [1](https://www.legifrance.gouv.fr/affichTexte.do?cidTexte=JORFTEXT000037809855&dateTexte=20181231)."
    ]
   },
   {
@@ -107,7 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La robustesse technique et la sécurité ont été des points clés dans notre projet. Il faut en priorité mettre en place des leviers de sécurité, de contrôle et de surveillance pour éviter tout problème potentiel. Par exemple, HumanForYou a prévu la possibilité de désactiver l'IA en cas de problème et a veillé à ce que l'IA soit développée selon les normes et standards de sécurité en vigueur, pour garantir un haut niveau de protection des données."
+    "La robustesse technique et la sécurité ont été des points clés dans notre projet. Il faut en priorité mettre en place des leviers de sécurité, de contrôle et de surveillance pour éviter tout problème potentiel. Par exemple, HumanForYou a prévu la possibilité de désactiver l'IA en cas de problème et a veillé à ce que l'IA soit développée selon les normes et standards de sécurité en vigueur, pour garantir un haut niveau de protection des données.\n",
+    "\n",
+    "Ressources [2](https://www.lebigdata.fr/intelligence-artificielle-securite), [3](https://linc.cnil.fr/fr/securite-des-systemes-dia-les-gestes-qui-sauvent)."
    ]
   },
   {
@@ -123,7 +127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous avons pris en compte la confidentialité et la gouvernance des données tout au long du projet. Nous avons opté pour la non-collecte de données personnelles pour respecter la vie privée des utilisateurs et recommandons une localisation sécurisée des serveurs, et assurer que les responsables et les utilisateurs soient identifiables et responsables. Enfin, il faut mettre en place un contrôle des données par les utilisateurs pour leur permettre de gérer leurs informations de manière autonome."
+    "Nous avons pris en compte la confidentialité et la gouvernance des données tout au long du projet. Nous avons opté pour la non-collecte de données personnelles pour respecter la vie privée des utilisateurs et recommandons une localisation sécurisée des serveurs, et assurer que les responsables et les utilisateurs soient identifiables et responsables. Enfin, il faut mettre en place un contrôle des données par les utilisateurs pour leur permettre de gérer leurs informations de manière autonome.\n",
+    "\n",
+    "Ressources [4](https://www.cnil.fr/fr/intelligence-artificielle/ia-comment-etre-en-conformite-avec-le-rgpd), [5](https://www.ibm.com/fr-fr/analytics/data-privacy-ai-protection)."
    ]
   },
   {
@@ -139,7 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous avons veillé à éviter tout parti pris dans notre projet. Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Nous avons ainsi assuré la transparence de notre projet en fournissant des explications claires sur les choix de recommandations proposées par l'IA."
+    "Nous avons veillé à éviter tout parti pris dans notre projet. Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Nous avons ainsi assuré la transparence de notre projet en fournissant des explications claires sur les choix de recommandations proposées par l'IA.\n",
+    "\n",
+    "Ressource [6](https://www.diplomatie.gouv.fr/fr/politique-etrangere-de-la-france/diplomatie-numerique/transparence-et-responsabilite-les-enjeux-de-l-intelligence-artificielle/)."
    ]
   },
   {
@@ -155,7 +163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans notre projet, nous avons veillé à ne pas introduire de biais ou de discrimination, et à respecter la diversité et l'égalité de traitement. Nous avons évité tout traitement basé sur l'origine, l'éthnie, la nationalité, l'handicap, le sexe, la religion et le statut matrimonial ou familial."
+    "Dans notre projet, nous avons veillé à ne pas introduire de biais ou de discrimination, et à respecter la diversité et l'égalité de traitement. Nous avons évité tout traitement basé sur l'origine, l'éthnie, la nationalité, l'handicap, le sexe, la religion et le statut matrimonial ou familial.\n",
+    "\n",
+    "Ressources [7](https://assembly.coe.int/LifeRay/EGA/Pdf/TextesProvisoires/2020/20200915-PreventingDiscriminationAI-FR.pdf), [8](https://www.zdnet.fr/actualites/une-ia-digne-de-confiance-l-ue-publie-des-lignes-directrices-pour-le-developpement-d-une-ia-ethique-39883303.htm)."
    ]
   },
   {
@@ -171,7 +181,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous avons pris en compte le bien-être environnemental et sociétal dans notre projet d'IA en évitant tout risque de traçabilité pour les utilisateurs et en garantissant la sécurité des données. Nous avons assuré que notre projet ne pose aucun risque pour l'environnement ou la société."
+    "Nous avons pris en compte le bien-être environnemental et sociétal dans notre projet d'IA en évitant tout risque de traçabilité pour les utilisateurs et en garantissant la sécurité des données. Nous avons assuré que notre projet ne pose aucun risque pour l'environnement ou la société.\n",
+    "\n",
+    "Ressource [9](https://ecoinfo.cnrs.fr/2022/03/15/impacts-sociaux-de-lia/)."
    ]
   },
   {
@@ -187,7 +199,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enfin, il faut assurer la conformité aux normes en vigueur pour garantir la responsabilité du projet. Nous avons ainsi veillé à respecter les lois et les réglementations en matière d'éthique de l'IA pour assurer la transparence et la responsabilité."
+    "Enfin, il faut assurer la conformité aux normes en vigueur pour garantir la responsabilité du projet. Nous avons ainsi veillé à respecter les lois et les réglementations en matière d'éthique de l'IA pour assurer la transparence et la responsabilité.\n",
+    "\n",
+    "Ressource [4](https://www.cnil.fr/fr/intelligence-artificielle/ia-comment-etre-en-conformite-avec-le-rgpd)."
    ]
   },
   {
