Update - summary with links

--- a/Projet/ethique.ipynb
+++ b/Projet/ethique.ipynb
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Situation initiale ;\n",
-    "2. Solutions ;\n",
-    "3. Parties prenantes ;\n",
-    "4. Impacts ;\n",
-    "5. Filtre éthique ;\n",
-    "6. Glossaire."
+    "1. [Situation initiale](#1-Situation-initiale)\n",
+    "2. [Solutions](#2-solutions)\n",
+    "3. [Parties prenantes](#3-Parties-prenantes)\n",
+    "4. [Impacts](#4-Impacts)\n",
+    "5. [Filtre éthique](#5-Filtre-éthique)\n",
+    "6. [Glossaire](#6-Glossaire)"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Voici les solutions proposées pour chaque exigences proposées par la comission européenne :"
+    "Voici les solutions proposées pour chaque exigences proposées par la Comission Européenne :"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "| Respect de l'autonomie humaine | - L'intelligence artificielle doit être utilisisée pour proposer des suggestions et des recommandations, mais ne doit pas être utilisée pour prendre des décisions. |\n",
     "| Robustesse technique et sécurité | - Doit disposer de leviers de sécurité, de contrôle et de surveillance. Comme par exemple, la possibilité de désactiver l'IA en cas de problème. |\n",
     "| Confidentialité et gouvernance des données | - Pas de collecte de données personnelles. </br>- Localisation des serveurs. </br>- Les responsables et les utilisateurs doivent être identifiables et responsables. </br>- Contrôle des données par les utilisateurs. |\n",
-    "| Transparence | - Pas de partit-pris. </br>- Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. |\n",
+    "| Transparence | - Pas de parti-pris. </br>- Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. |\n",
     "| Diversité, non-discrimination et équité | - Pas de biais ou de discrimination. </br>- Respect de la diversité et de l'égalité de traitement. </br>- *Pas de traitement sur : l'origine, l'éthnie, la nationalité, l'handicap, le sexe, la religion et le statut matriominial ou familial.* |\n",
     "| Bien-être environnemental et sociétal | - Pas de risque de traçabilité pour les utilisateurs. </br>- Pas de risque de sécurité pour les données. |\n",
     "| Responsabilité | - Conformité aux normes en vigueur. |"
